3.0.0-alpha (2013-??-??)
	* Added: Support for broken 2.1 vCards produced by microsoft.
	* Added: Automatically decoding quoted-printable values.
	* Added: Decoding RFC6868 parameter values (uses ^ as an escape
	  character).
	* Added: Fancy new MimeDir parser.

2.0.7-stable (2013-03-05)
	* Fixed: Microsoft re-uses their magic numbers for different timezones,
	  specifically id 2 for both Sarajevo and Lisbon). A workaround was added
	  to deal with this.

2.0.6-stable (2013-02-17)
	* Fixed: The reader now properly parses parameters without a value.

2.0.5-stable (2012-11-05)
	* Fixed: The FreeBusyGenerator is now properly using the factory methods
	  for creation of components and properties.

2.0.4-stable (2012-11-02)
	* Added: Known Lotus Notes / Domino timezone id's.

2.0.3-stable (2012-10-29)
	* Added: Support for 'GMT+????' format in TZID's.
	* Added: Support for formats like SystemV/EST5EDT in TZID's.
	* Fixed: RecurrenceIterator now repairs recurrence rules where UNTIL < DTSTART.
	* Added: Support for BYHOUR in FREQ=DAILY (@hollodk).
	* Added: Support for BYHOUR and BYDAY in FREQ=WEEKLY.

2.0.2-stable (2012-10-06)
	* Added: includes.php file, to load the entire library in one go.
	* Fixed: A problem with determining alarm triggers for TODO's.

2.0.1-stable (2012-09-22)
	* Removed: Element class. It wasn't used.
	* Added: Basic validation and repair methods for broken input data.
	* Fixed: RecurrenceIterator could infinitely loop when an INTERVAL of 0
	  was specified.
	* Added: A cli script that can validate and automatically repair vcards
	  and iCalendar objects.
	* Added: A new 'Compound' property, that can automatically split up parts
	  for properties such as N, ADR, ORG and CATEGORIES.
	* Added: Splitter classes, that can split up large objects (such as exports)
	  into individual objects (thanks @DominikTO and @armin-hackmann).
	* Added: VFREEBUSY component, which allows easily checking wether
	  timeslots are available.